--- a/App/src/app/nav/nav.component.html
+++ b/App/src/app/nav/nav.component.html
@@ -1,6 +1,7 @@
 <div class="navbar-container">
   <ul class="menu-container">
-    <li class="menu-item">Home</li>
-    <li class="menu-item">Account</li>
+    <a routerLink="">Home</a>
+    <a routerLink="calculator">Calculator</a>
+    <a routerLink="account">Account</a>
   </ul>
 </div>
