--- a/App/src/styles.css
+++ b/App/src/styles.css
@@ -4,3 +4,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-image: url('./assets/bg-bridge.jpg');
+  background-repeat: none;
+  background-size: cover;
+  background-size: auto;
+}
