--- a/App/src/app/components/side-menu/side-menu.component.html
+++ b/App/src/app/components/side-menu/side-menu.component.html
@@ -1,9 +1,8 @@
 <div class="sidemenu-container hidden">
   <div class="menu-container">
     <ul class="flex-column ml-05">
-      <a routerLink="">H</a>
-      <a routerLink="calculator">C</a>
-      <a routerLink="account">A</a>
+      <a routerLink=''>H</a>
+      <a routerLink="contacts">C</a>
     </ul>
   </div>
   <div class="button-container">
