--- a/App/src/app/components/side-menu/side-menu.component.css
+++ b/App/src/app/components/side-menu/side-menu.component.css
@@ -8,10 +8,15 @@ a {
   font-size: 24px;
 }
 
+a:hover {
+  cursor: pointer;
+}
+
 .sidemenu-container {
   height: 100vh;
   align-items: center;
   position: absolute;
+  z-index: 100;
   display: flex;
 }
 
