Fix: contactsLink had missing class "text-hover";

--- a/App/src/app/components/nav/nav.component.html
+++ b/App/src/app/components/nav/nav.component.html
@@ -10,7 +10,7 @@
     >
     <a
       routerLink="/contacts"
-      class="animated-btn text=hover"
+      class="animated-btn text-hover"
       (click)="handleClick('linkContacts')"
       id="linkContacts"
       >Contacts</a
