--- a/App/src/app/pages/contacts/contacts.component.css
+++ b/App/src/app/pages/contacts/contacts.component.css
@@ -1,6 +1,6 @@
 .contacts-container {
   position: absolute;
-  top: 8rem;
+  top: 10rem;
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -9,18 +9,28 @@
 
 .inner-container {
   padding: 1rem 2rem;
-  border-left: 3px solid rgb(221, 149, 16);
-  border-right: 3px solid rgb(221, 149, 16);
+  color: aliceblue;
 }
 
 .animation-display-slide {
-  animation: display-slide ease-out 0.6s;
+  animation: display-slide ease-out 0.4s;
 }
 
-.navy-text {
-    color: #2887a7;
+.ellipse-gb {
+  background-color: #2f96b8;
+  height: 9rem;
+  width: 20rem;
+  border-radius: 50%;
+  box-shadow: 3px 6px 2px #23738d;
 }
 
+.underscored {
+  text-decoration: underline 2px rgb(221, 149, 16);
+}
+
+.user-unselect {
+  user-select: none;
+}
 /* ANIMATIONS */
 @keyframes display-slide {
   0% {
