--- a/App/src/app/pages/contacts/contacts.component.html
+++ b/App/src/app/pages/contacts/contacts.component.html
@@ -1,8 +1,14 @@
 <div class="contacts-container">
-  <div class="inner-container navy-text">
-    <p >My contacts:</p>
-    <span>Phone: {{ phoneNum }}</span>
+  <div class="inner-container ellipse-gb">
+    <p class="user-unselect">My contacts:</p>
+    <span
+      ><span class="user-unselect">Phone: </span
+      ><span class="underscored">{{ phoneNum }}</span></span
+    >
     <br />
-    <span>Email: {{ email }}</span>
+    <span
+      ><span class="user-unselect">Email: </span
+      ><span class="underscored">{{ email }}</span></span
+    >
   </div>
 </div>
