--- a/App/src/app/components/nav/nav.component.html
+++ b/App/src/app/components/nav/nav.component.html
@@ -16,4 +16,15 @@
       >Contacts</a
     >
   </ul>
+  <div class="social-links-container">
+    <a href="https://github.com/mbisovskyi" target="_blank"
+      ><img src="../../../assets/github.png" alt="git-hub" width="40px"
+    /></a>
+    <a href="https://www.linkedin.com/in/mbisovskyi/" target="_blank"
+      ><img src="../../../assets/linkedin.png" alt="linkedin" width="40px"
+    /></a>
+    <a href="https://twitter.com/twit_mbisovskyi" target="_blank"
+      ><img src="../../../assets/twitter.png" alt="twitter" width="40px"
+    /></a>
+  </div>
 </div>
