Feature: Added content and styling for the Home Page

--- a/App/src/app/app.component.html
+++ b/App/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-nav></app-nav>
-<app-side-menu></app-side-menu>
-<router-outlet></router-outlet>
+<header>
+  <app-nav></app-nav>
+</header>
+<body>
+  <router-outlet></router-outlet>
+</body>
+<footer></footer>
