--- a/App/src/app/pages/home/home.component.html
+++ b/App/src/app/pages/home/home.component.html
@@ -1,3 +1,54 @@
 <div class="homepage-container">
-    <p>Home Page</p>
+  <h1>Portfolio</h1>
+  <div class="inner-container">
+    <div class="info-container">
+      <h3>Mykola Bisovskyi</h3>
+      <h5>Software Developer</h5>
+      <div class="image-container">
+        <img
+          id="person-img"
+          src="../../../assets/Headshot.jpg"
+          alt="person_image"
+        />
+      </div>
+    </div>
+    <div class="story-container">
+      <h3>Story</h3>
+      <h5>"Dreams come through!"</h5>
+      <div class="story-inner-container">
+        <div class="story-text-container">
+          <p>
+            That feeling when you always dreamed about having the best job in
+            the world and finally got it!
+          </p>
+          <p>
+            To be successful and reach your goal you need to find your strongest
+            motivation!
+          </p>
+          <p>
+            I had multiple reasons which became my motivations for changing
+            career from being a truck driver to being a software developer:<br />My
+            dream and my son! Two of my strongest motivations!
+          </p>
+          <p>
+            One of the best decisions I have ever made is to choose
+            <a href="https://devcodecamp.com" target="_blank">devCodeCamp</a>
+            as my school and to trust them on 100% and let them teach me and
+            guide me on the path to becoming a software developer.<br />
+            I'm thankful for everything. You are in my heart forever!
+          </p>
+          <p>
+            Graduated in September 2022 and in 3 months I landed my first job at
+            <br /><a href="https://horizonsinsurancesystems.com" target="_blank"
+              >Horizon Systems</a
+            >.
+          </p>
+          <p>
+            Dreams always come through! It just depends on how strong your dream
+            is!
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
