--- a/App/src/app/pages/home/home.component.css
+++ b/App/src/app/pages/home/home.component.css
@@ -1,10 +1,98 @@
 .homepage-container {
-    width: 80%;
-    margin: auto;
+  width: 80%;
+  margin: auto;
+  padding: 10rem 0 0;
 }
 
-p {
-    color: green;
-    font-size: 5rem;
-    text-align: center;
+.homepage-container > h1 {
+  text-align: center;
+  color: #216e88;
+}
+
+.inner-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.info-container,
+.story-container {
+  margin: 0 auto;
+  width: 50%;
+  text-align: center;
+}
+
+.info-container h3 {
+  color: rgb(221, 149, 16);
+  text-shadow: 1px 1px gray;
+}
+
+.info-container h5 {
+  color: #216e88;
+}
+
+.image-container {
+  min-width: 50%;
+  margin: 3rem auto 0;
+}
+
+.image-container:hover {
+  cursor: pointer;
+  animation: wiggle infinite alternate 0.6s;
+}
+
+#person-img {
+  width: 100%;
+  padding: 1rem;
+  box-shadow: inset 0 0 10rem #0f5d8d;
+}
+
+.story-container h3 {
+  color: rgb(221, 149, 16);
+  text-shadow: 1px 1px gray;
+}
+
+.story-container h5 {
+  color: #216e88;
+}
+
+.story-inner-container {
+  position: relative;
+  margin-left: 1rem;
+  margin-top: 3rem;
+  padding: 1rem;
+  font-size: larger;
+  height: 32.7rem;
+  box-shadow: inset 0 0 10rem rgba(15, 93, 141, 0.9);
+}
+
+.story-text-container {
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  background-color: rgba(138, 138, 138, 0.5);
+  overflow: hidden;
+}
+
+.story-text-container {
+  color: rgb(230, 230, 230);
+  text-shadow: 1px 1px gray;
+}
+
+.story-text-container a {
+  text-decoration: none;
+  text-shadow: 1px 1px rgb(75, 52, 11);
+  color: rgb(221, 149, 16);
+}
+
+/* ANIMATIONS */
+@keyframes wiggle {
+  0% {
+    transform: rotateZ(1deg);
+  }
+  50% {
+    transform: rotateZ(-1deg);
+  }
+  100% {
+    transform: rotateZ(1deg);
+  }
 }
