Feature: Created, styled and added Footer component

--- a/App/src/app/components/nav/nav.component.css
+++ b/App/src/app/components/nav/nav.component.css
@@ -3,7 +3,7 @@
   padding: 1rem;
   box-shadow: 0 3px 10px rgb(80, 80, 80);
   position: absolute;
-  width: 100vw;
+  width: 100%;
   z-index: 100;
   margin-bottom: 4rem;
 }
