--- a/App/src/app/pages/home/home.component.css
+++ b/App/src/app/pages/home/home.component.css
@@ -1,6 +1,6 @@
 .homepage-container {
   width: 80%;
-  margin: auto;
+  margin: 0 auto 10rem;
   padding: 10rem 0 0;
 }
 
@@ -61,14 +61,14 @@
   margin-top: 3rem;
   padding: 1rem;
   font-size: larger;
-  height: 32.7rem;
+  height: 32.47rem;
   box-shadow: inset 0 0 10rem rgba(15, 93, 141, 0.9);
 }
 
 .story-text-container {
   width: 100%;
   height: 100%;
-  padding: 1rem;
+  padding: 0.8rem;
   background-color: rgba(138, 138, 138, 0.5);
   overflow: hidden;
 }
