Delete: Account page is deleted as not needed Feature: Projects page is created and connected to the router + basic toggler of div.style.display property is added (INCOMPLETED)

--- a/App/src/app/components/nav/nav.component.html
+++ b/App/src/app/components/nav/nav.component.html
@@ -15,6 +15,13 @@
       id="linkContacts"
       >Contacts</a
     >
+    <a
+      routerLink="/projects"
+      class="animated-btn text-hover"
+      (click)="handleClick('linkProjects')"
+      id="linkProjects"
+      >Projects</a
+    >
   </ul>
   <div class="social-links-container">
     <a href="https://github.com/mbisovskyi" target="_blank"
