Feature: installed jQuery and connected it to the index.html + added a jQuery method to toggle a list of projects div + refactored code for home page image animation to be able to toggle animation for that image.

--- a/App/src/app/pages/home/home.component.html
+++ b/App/src/app/pages/home/home.component.html
@@ -4,13 +4,15 @@
     <div class="info-container">
       <h3>Mykola Bisovskyi</h3>
       <h5>Software Developer</h5>
-      <div class="image-container">
+      <div class="image-container animation-wiggle">
         <img
           id="person-img"
           src="../../../assets/Headshot.jpg"
           alt="person_image"
         />
       </div>
+      <span style="color: white; font-size: 1.5rem">Animation: </span
+      ><button id="animation-btn">On</button>
     </div>
     <div class="story-container">
       <h3>Story</h3>
