--- a/App/src/app/pages/home/home.component.css
+++ b/App/src/app/pages/home/home.component.css
@@ -37,6 +37,9 @@
 
 .image-container:hover {
   cursor: pointer;
+}
+
+.animation-wiggle {
   animation: wiggle infinite alternate 0.6s;
 }
 
@@ -44,6 +47,12 @@
   width: 100%;
   padding: 1rem;
   box-shadow: inset 0 0 10rem #0f5d8d;
+}
+
+#animation-btn {
+  border: none;
+  padding: 0 0.5rem;
+  color: green;
 }
 
 .story-container h3 {
