--- a/App/src/app/pages/projects/projects.component.html
+++ b/App/src/app/pages/projects/projects.component.html
@@ -1,7 +1,6 @@
-<div class="projects-container" style="padding-top: 20rem">
+<div class="projects-container">
+  <button class="open-close-btn">Close</button>
   <div class="projects">
-    <p class="element">projects works!</p>
-    <p class="element">projects works!</p>
+    <p class="element">List of projects</p>
   </div>
-  <button class="open-close-btn" (click)="someFunction()">Close</button>
 </div>
