Feature-1: Added a toggle button to turn on or off an animation of an image on the Home Page; Feature-2: Created and exported projectsData.ts file to store a list of project objects + Added functionality to display projects on the Projects Page + Added functionality to display next or previous project on button click respectively; Styling: Created folder assets/projects to store all projects images + Added styling to projects container to display it properly.

--- a/App/src/app/pages/home/home.component.css
+++ b/App/src/app/pages/home/home.component.css
@@ -50,9 +50,37 @@
 }
 
 #animation-btn {
+  position: relative;
   border: none;
+  border-radius: 10px;
+  overflow: hidden;
   padding: 0 0.5rem;
+  width: 5rem;
+}
+
+.statuses {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: larger;
+}
+
+#on-status {
   color: green;
+}
+
+#off-status {
+  color: rgb(255, 0, 0);
+}
+
+.pseudo-container {
+  height: 100%;
+  width: 50%;
+  background-color: rgba(15, 93, 141, 0.8);
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0%;
 }
 
 .story-container h3 {
