--- a/App/src/app/pages/projects/projects.component.html
+++ b/App/src/app/pages/projects/projects.component.html
@@ -1,6 +1,8 @@
 <div class="projects-container">
   <button class="open-close-btn">Close</button>
   <div class="projects">
-    <p class="element">List of projects</p>
+    <img id="project-image" src="{{ projectImage }}" />
   </div>
+  <button id="prev-project-btn">Previous</button>
+  <button id="next-project-btn">Next</button>
 </div>
