--- a/App/src/app/pages/home/home.component.html
+++ b/App/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
     <div class="info-container">
       <h3>Mykola Bisovskyi</h3>
       <h5>Software Developer</h5>
-      <div class="image-container animation-wiggle">
+      <div class="image-container">
         <img
           id="person-img"
           src="../../../assets/Headshot.jpg"
@@ -12,7 +12,13 @@
         />
       </div>
       <span style="color: white; font-size: 1.5rem">Animation: </span
-      ><button id="animation-btn">On</button>
+      ><button id="animation-btn">
+        <div class="statuses">
+          <span id="on-status">On</span>
+          <span id="off-status">Off</span>
+        </div>
+        <div class="pseudo-container"></div>
+      </button>
     </div>
     <div class="story-container">
       <h3>Story</h3>
